# crew-ai-agent

./: README.md  main.py  pyproject.toml  requirements.txt  run.sh
agents/: ip_agent.py
tasks/: ip_tasks.py
tools/: ripe_tools.py
